<resources>
    <string name="app_name">Good food</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="rep_password">repeat password</string>
    <string name="username">username</string>
    <string name="username_example">Username</string>
    <string name="email_example">email@email.com</string>
    <string name="log_in">Login</string>
    <string name="log_out">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="last_seen">Last seen:</string>
    <string name="popular">Popular:</string>
    <string name="registration">Registration</string>
    <string name="recipe_search">Search new recipes</string>
    <string name="no_recipe_found">No recipe found</string>
    <string name="saved_recipes">Collections</string>
    <string name="acc_settings">Account settings</string>
    <string name="notifications">Notifications</string>
    <string name="nutrients_info">Nutrients info (per serving):</string>
    <string name="ingredients_title">Ingredients:</string>
    <string name="recipe_steps_title">Recipe:</string>
    <string name="nutrients_info_amount_example">200</string>
    <string name="calories">Calories:</string>
    <string name="carbs">Carbs:</string>
    <string name="fat">Fat:</string>
    <string name="protein">Protein:</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_search">Search</string>
    <string name="fragment_saved">Saved</string>
    <string name="category_example">Desserts</string>
    <string name="recipe_name">Name</string>
    <string name="recipe_description">Recipe description…</string>
    <string name="user_data">User data</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="create_recipe_set">Create recipe set</string>
    <string name="empty_recipe_set">Add new recipe</string>
    <string name="save">Save</string>
    <string name="dinner">Dinner</string>
    <string name="email_notifications">Email</string>
    <string name="meals_notifications">Meals notifications</string>
    <string name="email_notifications_title">Email notifications</string>
    <string name="ingredient_example">Ingredient</string>
    <string name="ingredient_amount_example">300g</string>
    <string name="ingredient_number_example">1</string>
    <string name="email_notifications_on">Email notifications enabled</string>
    <string name="email_notifications_off">Email notifications disabled</string>
    <string name="forget_password">Forget password?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="search_by">Search recipe by:</string>
    <string name="results">Results</string>
    <string name="recipe_step_desc">Detailed description of each recipe step</string>
    <string name="nutrients_info_btn">Nutrients info</string>
    <string name="time_example">1h 30m</string>
    <string name="servings_example">2</string>
    <string name="summary">Short or long description of recipe by author on spoonacular.com</string>
    <string name="new_collection_hint">New collection name</string>
    <string name="choose">or</string>
    <string name="choose_collection">Choose collection to save</string>
    <string name="create_new_collection">Create new collection</string>
    <string name="email_title">Email</string>
    <string name="choose_image">Choose photo</string>
    <string name="remove_collection">Remove collection</string>
    <string name="rename_collection">Rename collection</string>
    <string name="similar_recipes">Show similar recipes</string>
</resources>
