<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/choose_collection"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/spinner_collections"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/choose"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_new_collection"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/new_collection_hint" />
</LinearLayout>
