<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppToolbar"
            app:title="@string/registration" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        style="@style/TextInputLayoutStyle"
        android:layout_marginTop="40dp"
        android:hint="@string/username"
        app:counterMaxLength="@integer/password_max_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintVertical_bias=".2"
        app:startIconContentDescription="@string/username"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            style="@style/TextInputEditTextStyle"
            android:layout_weight="1"
            android:inputType="text"
            android:maxLength="@integer/password_max_length" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/email"
        app:counterMaxLength="@integer/email_max_length"
        app:layout_constraintEnd_toEndOf="@id/til_username"
        app:layout_constraintStart_toStartOf="@id/til_username"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:startIconContentDescription="@string/email"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/TextInputEditTextStyle"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/email_max_length" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/password"
        app:counterMaxLength="@integer/password_max_length"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/til_email"
        app:layout_constraintStart_toStartOf="@id/til_email"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:startIconContentDescription="@string/password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pass"
            style="@style/TextInputEditTextStyle"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_rep_pass"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/rep_password"
        app:counterMaxLength="@integer/password_max_length"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/til_pass"
        app:layout_constraintStart_toStartOf="@id/til_pass"
        app:layout_constraintTop_toBottomOf="@id/til_pass"
        app:startIconContentDescription="@string/rep_password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_rep_pass"
            style="@style/TextInputEditTextStyle"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        style="@style/ButtonRoundedDark"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="@+id/til_rep_pass"
        app:layout_constraintStart_toStartOf="@+id/til_rep_pass"
        app:layout_constraintTop_toBottomOf="@id/til_rep_pass" />

    <TextView
        android:id="@+id/tv_already_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_account"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_login"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/log_in"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
        app:layout_constraintStart_toEndOf="@+id/tv_already_registered"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />
</androidx.constraintlayout.widget.ConstraintLayout>
