<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/cl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextViewCollapsingToolbar"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/recipe_name">

            <ImageView
                android:id="@+id/iv_recipe"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_gravity="center"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/recipe_example"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/btn_nutrients_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_baseline_expand_more_24"
                android:text="@string/nutrients_info_btn"
                android:textColor="@color/grey_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_ingredients_title"
                style="@style/TextViewScreenTitles"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/ingredients_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_summary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients_title"
                tools:itemCount="2"
                tools:listitem="@layout/item_ingredient" />

            <TextView
                android:id="@+id/tv_recipe_steps_title"
                style="@style/TextViewScreenTitles"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/recipe_steps_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_ingredients" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recipe_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_steps_title"
                tools:itemCount="3"
                tools:listitem="@layout/item_recipe_step" />

            <ImageView
                android:id="@+id/iv_time_of_cooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_nutrients_info"
                app:srcCompat="@drawable/ic_baseline_access_time_filled_24" />

            <ImageView
                android:id="@+id/iv_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@id/tv_servings"
                app:layout_constraintTop_toBottomOf="@id/btn_nutrients_info"
                app:srcCompat="@drawable/ic_baseline_people_24" />

            <TextView
                android:id="@+id/tv_time_of_cooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/time_example"
                app:layout_constraintBottom_toBottomOf="@+id/iv_time_of_cooking"
                app:layout_constraintStart_toEndOf="@+id/iv_time_of_cooking"
                app:layout_constraintTop_toTopOf="@+id/iv_time_of_cooking" />

            <TextView
                android:id="@+id/tv_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/servings_example"
                app:layout_constraintBottom_toBottomOf="@id/iv_servings"
                app:layout_constraintEnd_toEndOf="@+id/btn_nutrients_info"
                app:layout_constraintTop_toTopOf="@id/iv_servings" />

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/summary"
                app:flow_horizontalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_time_of_cooking" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:baselineAlignBottom="false"
        android:src="@drawable/ic_baseline_bookmark_border_24"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="end|bottom" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_similar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/show_more_btn"
        android:contentDescription="@string/similar_recipes"
        android:src="@drawable/ic_baseline_menu_book_24"
        app:backgroundTint="@color/show_more_btn"
        app:layout_anchor="@id/cl_content"
        app:layout_anchorGravity="end|bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
